2001-10-31  Dan <bobo@bocklabs.wisc.edu>
        * Fixed bug in bin/afppasswd/Makefile.am causing compile problems
          with SuSE distro.

2001-10-24  joe  c  <marcus@marcuscom.com>

	* etc/afpd/fork.c: Patch to add read-only locking support
	  (thanks to Miro Jurisic <meeroh@MIT.EDU>)

2001-10-23  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/{{afpd_options,filedir,main,unix}.c,
	{filedir,globals,unix}.h}: patch from Edmund Lam to allow
	perms masks

2001-10-21  joe c <marcus@marcuscom.com>

	* libatalk/cnid*.c: Big patch to improve transaction throughput
	  and database resiliency

2001-10-19  Lance Levsen  <l.levsen@printwest.com>

	* doc/FAQ: Thanks for the Patch Karen.

	* doc/INSTALL: Thanks for the Patch Karen.

	* CONTRIBUTORS (Developers): Thanks for the patch Brandon.

	* configure.in: Fix db3 detection for db3 3.3.x users.  Thanks to
	  Jonathan Newman <jnewman@mudpup.com>

2001-10-18  joe c <marcus@marcuscom.com>

	* libatalk/cnid/cnid_add.c: Fix dancing icon problem
	* bin/afile/achfile.c: Fix resource fork problem on littleendian
	  platforms.  Thanks to Brandon Warren <bwarren@u.washington.edu>.

2001-10-17  joe c <marcus@marcuscom.com>

	* libatalk/cnid/cnid_add.c: Fix deadlock problem when copying files to
	  netatalk server from multiple clients

2001-10-16  Lance Levsen  <l.levsen@printwest.com>

	* man/man1/apple_mv.1.tmpl: Added apple_mv man page.

	* man/man1/apple_rm.1.tmpl: Added apple_rm man page.

	* contrib/shell_utils/apple_mv: Updated perl. Added error check.

	* config/Makefile.am: Change autoconf variable $(f) to shell
	variable $$f.

	* man/man1/Makefile.am: Modified to allow variable subs in man pages.

	* contrib/shell_utils/apple_cp: Updated. Fixed file to file
	copy.

2001-10-15  Lance Levsen  <l.levsen@printwest.com>

	* CONTRIBUTORS: Now up to date.

	* doc/FAQ: Added Karen A Swanberg's FAQ additions.

2001-10-14  Lance Levsen  <l.levsen@printwest.com>

	* doc/INSTALL: Added some basic instructions. Filled in more of